# Crypto

./: .gitignore  CMakeLists.txt  CUTOVER_4002.md  README.md  REPORT.md  SESSION_HANDOFF_2026-07-01_crypto_live.md  SESSION_HANDOFF_2026-07-02_giveback_ladder_and_gui.md  SESSION_HANDOFF_2026-07-02_ibkr_probe_cost_mredge.md  SESSION_HANDOFF_2026-07-05_eth_upjump_companion.md  companion_closed.csv.pre_phantom_purge_20260627  giveback_saver.py  stall_accountant.py
backtest/: AAVE_ETH_MIMIC_RESCUE_FINDINGS_2026-07-17.md  ALT_LOWTHR_MIMIC_FINDINGS_2026-07-18.md  BACKTEST_TRUTH_CRYPTO.md  BTC_LOWTHR_MIMIC_FINDINGS_2026-07-18.md  CAMPAIGN_LEVERS_2026-07-13.md  CASCADE_INCREMENT_FINDINGS_2026-07-20.md  CATCHUP_OUTAGE_CERT_2026-07-18.md  EARLY_CONFIRM_FINDINGS_2026-07-20.md  ETH_LOWTHR_MIMIC_FINDINGS_2026-07-18.md  ETH_PJ7W24_EXIT_OVERLAY_GATE_FINDINGS_2026-07-16.md  ETH_PJ7W24_PATIENT_EXIT_OVERLAY_SPEC_2026-07-16.md  ETH_UJMIMIC_15_BECASCADE_FINDINGS_2026-07-16.md  FLEETWIDE_RESCUE_TIER_CERT_2026-07-18.md  GOLDEN_UPJUMP.txt  HONEST_ENTRY_BASIS_RECERT_2026-07-20.md  HONEST_LEDGER_MEASURED_RECERT_2026-07-20.md  MIMIC_ALTERNATIVE_SEARCH_FINDINGS_2026-07-20.md  MIMIC_FLOOR_GSWEEP_FINDINGS_2026-07-15.md  NEWCOIN9_MIMIC_CERT_2026-07-18.md  ONDO_JUMPFLOOR_NOGO_2026-07-16.md  PROFIT_LOCK_GSWEEP_FINDINGS_2026-07-17.md  REAL_PARENT_MIMIC_FINDINGS_2026-07-16.md  RESULTS.md  STAGGERED_FLOOR_FINDINGS_2026-07-16.md  UPJUMP2PCT_SPOT_PARENT_FINDINGS.md  UPJUMP_LOWTHR_STOPRESCUE_FINDINGS.md  aave_eth_mimic_rescue_bt.cpp  append_1h_tails.py  btc_trendcore_cert_bt.py  cascade_increment_bt.cpp  catchup_outage_bt.cpp  core_trigger_be_bt.cpp  core_trigger_bt.cpp  core_trigger_maker_bt.cpp  core_trigger_p2_bt.cpp  cpp_clips.csv  crontab_backup_20260704_090335.txt  crontab_backup_20260704_093350.txt  crypto_companion_coldcut_sweep.py  crypto_companion_intraday_bt.py  (+60 more)
backtest/btc_trendcore_2026-07-20/: cert_results.txt
backtest/cascade_inc_2026-07-20/: AAVE_thr0.005.txt  AAVE_thr0.010.txt  AAVE_thr0.015.txt  AAVE_thr0.020.txt  ADA_thr0.005.txt  ADA_thr0.010.txt  ADA_thr0.015.txt  ADA_thr0.020.txt  APT_thr0.005.txt  APT_thr0.010.txt  APT_thr0.015.txt  APT_thr0.020.txt  ATOM_thr0.005.txt  ATOM_thr0.010.txt  ATOM_thr0.015.txt  ATOM_thr0.020.txt  AVAX_thr0.005.txt  AVAX_thr0.010.txt  AVAX_thr0.015.txt  AVAX_thr0.020.txt  BCH_thr0.005.txt  BCH_thr0.010.txt  BCH_thr0.015.txt  BCH_thr0.020.txt  BNB_thr0.005.txt  BNB_thr0.010.txt  BNB_thr0.015.txt  BNB_thr0.020.txt  BTC_thr0.005.txt  BTC_thr0.010.txt  BTC_thr0.015.txt  BTC_thr0.020.txt  COMP_thr0.005.txt  COMP_thr0.010.txt  COMP_thr0.015.txt  COMP_thr0.020.txt  CRV_thr0.005.txt  CRV_thr0.010.txt  CRV_thr0.015.txt  CRV_thr0.020.txt  (+101 more)
backtest/data/: AAVEUSDT_1d.csv  AAVEUSDT_1h.csv  AAVEUSDT_4h.csv  ADAUSDT_1d.csv  ADAUSDT_1h.csv  ADAUSDT_4h.csv  APTUSDT_1h.csv  ARBUSDT_1h.csv  ARKMUSDT_1h.csv  ATOMUSDT_1h.csv  AVAXUSDT_1d.csv  AVAXUSDT_1h.csv  BCHUSDT_1d.csv  BCHUSDT_1h.csv  BNBUSDT_1h.csv  BNBUSDT_4h.csv  BOMEUSDT_1h.csv  BTCUSDT_1d.csv  BTCUSDT_1h.csv  BTCUSDT_4h.csv  BTC_funding.csv  COMPUSDT_1h.csv  CRVUSDT_1h.csv  DAXUSDT_1h.csv  DJ30USDT_1d.csv  DOGEUSDT_1d.csv  DOGEUSDT_1h.csv  DOGEUSDT_4h.csv  DOTUSDT_1h.csv  EIGENUSDT_1h.csv  ENAUSDT_1h.csv  ETCUSDT_1h.csv  ETHFIUSDT_1h.csv  ETHUSDT_1d.csv  ETHUSDT_1h.csv  ETHUSDT_4h.csv  ETH_funding.csv  EURUSDT_1h.csv  FETUSDT_1h.csv  FILUSDT_1h.csv  (+60 more)
backtest/e0_exact_2026-07-20/: AAVE_thr0.005.txt  AAVE_thr0.010.txt  AAVE_thr0.015.txt  AAVE_thr0.020.txt  ADA_thr0.005.txt  ADA_thr0.010.txt  ADA_thr0.015.txt  ADA_thr0.020.txt  APT_thr0.005.txt  APT_thr0.010.txt  APT_thr0.015.txt  APT_thr0.020.txt  ATOM_thr0.005.txt  ATOM_thr0.010.txt  ATOM_thr0.015.txt  ATOM_thr0.020.txt  AVAX_thr0.005.txt  BCH_thr0.005.txt  (+123 more)
companion_clip/: companion_closed.csv
companion_intraday/: companion_closed.csv
config/: ibkrcrypto.json
gui/: GUI_SPLIT.md  index.html  run_mac.sh  server.py
include/: CmeSqfContracts.hpp  CmeSqfExecutor.hpp  IbkrCryptoFeed.hpp  IbkrCryptoStrat.hpp
legacy_companion/: companion_clipped.json  saver_ledger.csv  saver_state.json  stall_accountant.py
ops/: backup_pull.sh  binary_freshness_selftest.py  install_binary_freshness_cron.sh  parent_vs_mimic_report.py  retire_crypto_stall_python_cron.sh  retire_ibkrcrypto_book_cron.sh
outputs/: CRYPTO_MIRROR_EXTENSION_BT_2026-07-08.md  CRYPTO_WEIGHTING_RETEST_2026-07-08.md  CRYPTO_WEIGHTING_RETIREMENT_2026-07-08.md
src/: fetch.cpp  gui_server.cpp  ibkrcrypto_bt.cpp  ibkrcrypto_engine.cpp  live_mark.cpp  shadow_refresh.cpp  shadow_refresh_intraday.cpp  stall_companion.cpp  wave_companion.cpp
tools/: install_ab_gate_cron.sh  install_wave_companion_cron.sh  install_weighting_retest_cron.sh  run_ab_gate_shadow.sh  run_weighting_retest.sh
(+869 files in other folders)
